2010-03-08 Tom McCauley <thomas.mccauley@cern.ch>

	* BuildFile: remove spurious dependencies
	
2010-03-05 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyVertex.cc: change "position" to "pos" (to conform to what is used in drawing code)
	
2010-02-26 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyVertex: add
	* ISpyCaloTower.cc: add more info and evolve schema, get rid of pos (not filled or used)
	* ispy_35X_cfg.py: create ig files by default
	* ISpy_Producer_cff.py: add vertices to sequence
	* ispy_36_cfg.py: add
	* ispy_SelectCollisions09_cfg.py: add
	
2010-02-16  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.cc: Reorganize the logic to make sure that an
	archive doesn't get closed on timeout if we do not produce the ig
	files. 

2010-02-11  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyMuon.h, ISpyTrackRefitter.h, ISpyBasicCluster.cc,
	ISpyCaloCluster.cc, ISpyElectron.cc, ISpyGsfElectron.cc,
	ISpyGsfPFRecTrack.cc, ISpyGsfTrack.cc, ISpyMuon.cc,
	ISpyPATElectron.cc, ISpyPATMuon.cc, ISpyPFCluster.cc,
	ISpyPFRecTrack.cc, ISpyPreshowerCluster.cc, ISpySuperCluster.cc,
	ISpyTrack.cc, ISpyTrackRefitter.cc, ISpyTrackingParticle.cc:
	Migrate to a new IgAssociations API.

2010-01-28  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.h, ISpyService.cc: Add a flag to disable ig file production.
	* python/ispy_35X_cfg.py: Add a new flag for testing. 

2010-01-12 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpy_Producer_cff.py: add CaloMET, CaloTau, PFJet, PFMET, PFTau to sequence
	* ISpyCaloTau, ISpyPFTau: add
	* ispy_35_cfg.py: add

2010-01-07 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFJet: add

2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFMET, ISpyCaloMET: add
	
2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCSegment.cc: constrain segment to chamber
	* MakeISpyAnalyzer.py: update to use config for error
	
2009-12-22  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyMET.cc: Migtrated to a new MET data format.
